<resources>
    <string name="app_name">BasketballApp</string>
    <string name="positionTextView">Position:</string>
    <string name="newPlayerNameEntry">PlayerName</string>
    <string name="playerNumberText">Player Number:</string>
    <string name="btnSavePlayer">Save Player</string>
    <string name="btnDeletePlayer">Delete Player</string>
    <string name="btnCameraString">Camera</string>
    <string name="btnUploadString">Upload Photo</string>
    <string name="playerImageDesc">Player\'s Image</string>
    <string name="playerName">Player Name</string>

    <string name="positionLabel">Position:</string>
    <string-array name="position_collection">
        <item>Point Guard</item>
        <item>Shooting Guard</item>
        <item>Small Forward</item>
        <item>Power Forward</item>
        <item>Center</item>
    </string-array>

    <string name="btnDeletePlayerString">Delete Player</string>
    <string name="btnCreatePlayerString">Create Player</string>
    <string name="playerNumber">Player Number:</string>
</resources>
